--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 # sbielak2021.github.io-puzzlehuntbugs
 Test for hosting our puzzles
+<a href="https://sbielak2021.github.io/puzzlehuntbugs/Metapuzzle.pdf">Metapuzzle</a>
