--- a/index.html
+++ b/index.html
@@ -1,3 +1,33 @@
-# sbielak2021.github.io-puzzlehuntbugs
-Test for hosting our puzzles
+<!-- Credit to w3schools -->
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+h1 {
+  color: green;
+  font-family: verdana;
+  font-size: 300%;
+}
+a {
+  color: blue;
+  font-family: courier;
+  font-size: 160%;
+}
+</style>
+</head>
+<body>
+
+<h1>Group 1 Puzzlehunt!</h1>
+<p>Puzzles:</p>
 <a href="https://sbielak2021.github.io/puzzlehuntbugs/Metapuzzle.pdf">Metapuzzle</a>
+<a href="https://sbielak2021.github.io/puzzlehuntbugs/BeesbeBuzzing.pdf">Bees be Buzzing</a>
+<a href="https://sbielak2021.github.io/puzzlehuntbugs/Knightcrawler.pdf">Knightcrawler</a>
+<a href="https://sbielak2021.github.io/puzzlehuntbugs/NetworkingBug.pdf">Networking Bug</a>
+<a href="https://sbielak2021.github.io/puzzlehuntbugs/Termites.pdf">Termites</a>
+<a href="https://sbielak2021.github.io/puzzlehuntbugs/TheAntsGoMarching.pdf">The Ants Go Marching</a>
+<a href="https://sbielak2021.github.io/puzzlehuntbugs/ThisisNotaPuzzle.pdf">This is Not a Puzzle</a>
+<a href="https://sbielak2021.github.io/puzzlehuntbugs/WHOAREYOU.pdf">WHO ARE YOU?</a>
+
+  
+</body>
+</html>
