--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@ a {
 
 <h1>Group 1 Puzzlehunt!</h1>
 <p>Puzzles:</p>
-<a href="https://sbielak2021.github.io/puzzlehuntbugs/Metapuzzle.pdf">Metapuzzle</a>
-<a href="https://sbielak2021.github.io/puzzlehuntbugs/BeesbeBuzzing.pdf">Bees be Buzzing</a>
-<a href="https://sbielak2021.github.io/puzzlehuntbugs/Knightcrawler.pdf">Knightcrawler</a>
-<a href="https://sbielak2021.github.io/puzzlehuntbugs/NetworkingBug.pdf">Networking Bug</a>
-<a href="https://sbielak2021.github.io/puzzlehuntbugs/Termites.pdf">Termites</a>
-<a href="https://sbielak2021.github.io/puzzlehuntbugs/TheAntsGoMarching.pdf">The Ants Go Marching</a>
-<a href="https://sbielak2021.github.io/puzzlehuntbugs/ThisisNotaPuzzle.pdf">This is Not a Puzzle</a>
-<a href="https://sbielak2021.github.io/puzzlehuntbugs/WHOAREYOU.pdf">WHO ARE YOU?</a>
+<a href="https://sbielak2021.github.io/puzzlehuntbugs/Metapuzzle.pdf">Metapuzzle</a></br>
+<a href="https://sbielak2021.github.io/puzzlehuntbugs/BeesbeBuzzing.pdf">Bees be Buzzing</a></br>
+<a href="https://sbielak2021.github.io/puzzlehuntbugs/Knightcrawler.pdf">Knightcrawler</a></br>
+<a href="https://sbielak2021.github.io/puzzlehuntbugs/NetworkingBug.pdf">Networking Bug</a></br>
+<a href="https://sbielak2021.github.io/puzzlehuntbugs/Termites.pdf">Termites</a></br>
+<a href="https://sbielak2021.github.io/puzzlehuntbugs/TheAntsGoMarching.pdf">The Ants Go Marching</a></br>
+<a href="https://sbielak2021.github.io/puzzlehuntbugs/ThisisNotaPuzzle.pdf">This is Not a Puzzle</a></br>
+<a href="https://sbielak2021.github.io/puzzlehuntbugs/WHOAREYOU.pdf">WHO ARE YOU?</a></br>
 
   
 </body>
