--- a/solutions.html
+++ b/solutions.html
@@ -4,7 +4,7 @@
 <head>
 <style>
 h1 {
-  color: red
+  color: red;
   font-family: verdana;
   font-size: 300%;
 }
@@ -19,14 +19,14 @@ a {
 
 <h1>Group 1 Puzzlehunt Solutions!</h1>
 <p>Puzzle Solutions:</p>
-<a href="https://sbielak2021.github.io/puzzlehuntbugs/NetworkingBug.pdf">Networking Bug</a></br>
-<a href="https://sbielak2021.github.io/puzzlehuntbugs/BeesbeBuzzing.pdf">Bees be Buzzing</a></br>
-<a href="https://sbielak2021.github.io/puzzlehuntbugs/Knightcrawler.pdf">Knightcrawler</a></br>
-<a href="https://sbielak2021.github.io/puzzlehuntbugs/Termites.pdf">Termites</a></br>
-<a href="https://sbielak2021.github.io/puzzlehuntbugs/WHOAREYOU.pdf">WHO ARE YOU?</a></br>
-<a href="https://sbielak2021.github.io/puzzlehuntbugs/ThisisNotaPuzzle.pdf">This is Not a Puzzle</a></br>
-<a href="https://sbielak2021.github.io/puzzlehuntbugs/TheAntsGoMarching.pdf">The Ants Go Marching</a></br>
-<a href="https://sbielak2021.github.io/puzzlehuntbugs/Metapuzzle.pdf">Metapuzzle</a></br>
+<a href="https://sbielak2021.github.io/puzzlehuntbugs/solutions/NetworkingBug_solution.pdf">Networking Bug (solution guide) N/A</a></br>
+<a href="https://sbielak2021.github.io/puzzlehuntbugs/solutions/BeesbeBuzzing_solution.pdf">Bees be Buzzing (solution guide) N/A</a></br>
+<a href="https://sbielak2021.github.io/puzzlehuntbugs/solutions/Knightcrawler_solution.pdf">Knightcrawler (solution guide) N/A</a></br>
+<a href="https://sbielak2021.github.io/puzzlehuntbugs/solutions/Termites_solution.pdf">Termites (solution guide) N/A</a></br>
+<a href="https://sbielak2021.github.io/puzzlehuntbugs/solutions/WHOAREYOU_solution.pdf">WHO ARE YOU? (solution guide)</a></br>
+<a href="https://sbielak2021.github.io/puzzlehuntbugs/solutions/ThisisNotaPuzzle_solution.html">This is Not a Puzzle (solution guide)</a></br>
+<a href="https://sbielak2021.github.io/puzzlehuntbugs/solutions/TheAntsGoMarching_solution.pdf">The Ants Go Marching (solution guide) N/A</a></br>
+<a href="https://sbielak2021.github.io/puzzlehuntbugs/solutions/Metapuzzle_solution.pdf">Metapuzzle (solution guide) N/A</a></br>
 
   
 </body>
