--- a/solutions.html
+++ b/solutions.html
@@ -24,7 +24,7 @@ a {
 <a href="https://sbielak2021.github.io/puzzlehuntbugs/solutions/Knightcrawler_solution.pdf">Knightcrawler (solution guide) N/A</a></br>
 <a href="https://sbielak2021.github.io/puzzlehuntbugs/solutions/Termites_solution.pdf">Termites (solution guide) N/A</a></br>
 <a href="https://sbielak2021.github.io/puzzlehuntbugs/solutions/WHOAREYOU_solution.pdf">WHO ARE YOU? (solution guide)</a></br>
-<a href="https://sbielak2021.github.io/puzzlehuntbugs/solutions/ThisisNotaPuzzle_solution">This is Not a Puzzle (solution guide)</a></br>
+<a href="https://sbielak2021.github.io/puzzlehuntbugs/solutions/ThisisNotaPuzzle_solution.txt">This is Not a Puzzle (solution guide)</a></br>
 <a href="https://sbielak2021.github.io/puzzlehuntbugs/solutions/TheAntsGoMarching_solution.pdf">The Ants Go Marching (solution guide) N/A</a></br>
 <a href="https://sbielak2021.github.io/puzzlehuntbugs/solutions/Metapuzzle_solution.pdf">Metapuzzle (solution guide) N/A</a></br>
 
