--- a/solutions.html
+++ b/solutions.html
@@ -19,14 +19,14 @@ a {
 
 <h1>Group 1 Puzzlehunt Solutions!</h1>
 <p>Puzzle Solutions:</p>
-<a href="https://sbielak2021.github.io/puzzlehuntbugs/solutions/NetworkingBug_solution.pdf">Networking Bug (solution guide) N/A</a></br>
-<a href="https://sbielak2021.github.io/puzzlehuntbugs/solutions/BeesbeBuzzing_solution.pdf">Bees be Buzzing (solution guide) N/A</a></br>
-<a href="https://sbielak2021.github.io/puzzlehuntbugs/solutions/Knightcrawler_solution.pdf">Knightcrawler (solution guide) N/A</a></br>
-<a href="https://sbielak2021.github.io/puzzlehuntbugs/solutions/Termites_solution.pdf">Termites (solution guide) N/A</a></br>
+<a href="https://sbielak2021.github.io/puzzlehuntbugs/solutions/NetworkingBug_solution.pdf">Networking Bug (solution guide)</a></br>
+<a href="https://sbielak2021.github.io/puzzlehuntbugs/solutions/BeesbeBuzzing_solution.pdf">Bees be Buzzing (solution guide)</a></br>
+<a href="https://sbielak2021.github.io/puzzlehuntbugs/solutions/Knightcrawler_solution.pdf">Knightcrawler (solution guide)</a></br>
+<a href="https://sbielak2021.github.io/puzzlehuntbugs/solutions/Termites_solution.pdf">[N/A] Termites (solution guide)</a></br>
 <a href="https://sbielak2021.github.io/puzzlehuntbugs/solutions/WHOAREYOU_solution.pdf">WHO ARE YOU? (solution guide)</a></br>
 <a href="https://sbielak2021.github.io/puzzlehuntbugs/solutions/ThisisNotaPuzzle_solution.txt">This is Not a Puzzle (solution guide)</a></br>
 <a href="https://sbielak2021.github.io/puzzlehuntbugs/solutions/TheAntsGoMarching_solution.pdf">The Ants Go Marching (solution guide) N/A</a></br>
-<a href="https://sbielak2021.github.io/puzzlehuntbugs/solutions/Metapuzzle_solution.pdf">Metapuzzle (solution guide) N/A</a></br>
+<a href="https://sbielak2021.github.io/puzzlehuntbugs/solutions/Metapuzzle_solution.pdf">Metapuzzle (solution guide)</a></br>
 
   
 </body>
