--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@ a {
 <a href="https://sbielak2021.github.io/puzzlehuntbugs/puzzles/TheAntsGoMarching.pdf">The Ants Go Marching</a></br>
 <a href="https://sbielak2021.github.io/puzzlehuntbugs/puzzles/Metapuzzle.pdf">Metapuzzle</a></br>
 
+</br>
+<a href="https://sbielak2021.github.io/puzzlehuntbugs/solutions">Solutions</a></br>
   
 </body>
 </html>
